# atlas_client

./: CMakeLists.txt  README.md  build.sh
scripts/: dependencies.sh
src/: atlas_main.c
src/alarm/: atlas_alarm.c  atlas_alarm.h
src/coap/: atlas_coap_client.c  atlas_coap_client.h  atlas_coap_method.h  atlas_coap_response.h  atlas_coap_server.c  atlas_coap_server.h
src/coap_server/: atlas_coap_server.c  atlas_coap_server.h
src/commands/: atlas_command.c  atlas_command.h  atlas_command_types.h
src/commandsExecute/: atlas_command_execute.c  atlas_command_execute.h  atlas_command_execute_engine.c  atlas_command_execute_engine.h  atlas_command_execute_types.h  atlas_command_execute_utils.c
src/commands_execute/: atlas_command_execute_utils.c
src/data_plane/: CMakeLists.txt  Makefile  atlas_client.c  atlas_client.h  atlas_data_plane.c  atlas_data_plane.h  client.c  client.h
src/data_plane_connector/: atlas_data_plane_connector.c  atlas_data_plane_connector.h
src/identity/: .atlas_identity.c.swp  atlas_identity.c
src/logger/: atlas_logger.c  atlas_logger.h
src/received_commands/: received_commands.c  received_commands.h
src/register/: atlas_register.c  atlas_register.h
src/scheduler/: atlas_scheduler.c  atlas_scheduler.h
src/telemetry/: atlas_alert_utils.c  atlas_alert_utils.h  atlas_telemetry.c  atlas_telemetry.h  atlas_telemetry_features.c  atlas_telemetry_hostname.c  atlas_telemetry_kern_info.c  atlas_telemetry_packets_info.c  atlas_telemetry_sysinfo.c
src/utils/: atlas_config.c  atlas_config.h  atlas_status.h  atlas_utils.h
